[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/screens/game/GameContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/screens/UI/PauseButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/screens/UI/Panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/screens/Screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/screens/UI/PauseScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/screens/game/GameScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/theme/title_theme.tres" type="Theme" id=10]

[node name="Screen" instance=ExtResource( 4 )]
script = ExtResource( 6 )

[node name="PauseButton" parent="." index="0" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -37.0
margin_top = 8.0
margin_right = -1.0
margin_bottom = 29.0
theme = ExtResource( 10 )
text = "pause"

[node name="Windows" type="Control" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameContainer" parent="Windows" index="0" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 224.0
margin_bottom = 170.0

[node name="Panel" parent="Windows" index="1" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -197.0
margin_top = -185.0
margin_right = -51.0
margin_bottom = -74.0

[node name="PauseScreen" parent="." index="3" instance=ExtResource( 5 )]
visible = false

[connection signal="button_up" from="PauseButton" to="." method="_on_PauseButton_button_up"]
[connection signal="button_up" from="PauseScreen/PauseOverlay/VBoxContainer/Continue" to="." method="_on_PauseButton_button_up"]
[connection signal="button_up" from="PauseScreen/PauseOverlay/VBoxContainer/TitleButton" to="." method="_on_PauseButton_button_up"]

[editable path="PauseScreen"]
